# ampav-whisper

./: README.md  pyproject.toml
ampav/whisper/: transcribe.py
