[project]
name = "ampav-whisper"
version = "0.0.11"
description = "Whisper tooling for the AMPAV environment"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",   
]
authors = [
    {name = "Brian Wheeler", email="bdwheele@iu.edu"},
]

requires-python = ">=3.12"
dependencies = [
    "ampav-core>=0.0.11",
    "openai-whisper==20250625"
]

[project.urls]
Homepage = "https://github.com/AMPAV/ampav-parakeet"
Repository = "https://github.com/AMPAV/ampav-parakeet.git"
Issues = "https://github.com/AMPAV/ampav-parakeet/issues"


[project.scripts]
amapv_whisper_transcribe = "ampav.parakeet.transcribe:cli_whisper_transcribe"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"